# tightrope

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.bat  build.sh  c++.md  c++_ideas.md  fix_c++.md  fixes.md  store.db  vcpkg.json
app/: bulk-add-accounts.cjs  package-lock.json  package.json  playwright.config.ts  store.db  tsconfig.main.json  tsconfig.renderer.json  vite.config.ts
app/scripts/: native-module.js  stage-native-module.js  start-electron-dev.js
app/src/main/: codexSetup.ts  databasePassphrase.ts  index.ts  ipc.ts  native.ts
app/src/preload/: index.ts
app/src/renderer/: App.test.tsx  App.tsx  global.d.ts  index.html  main.tsx
app/src/renderer/data/: seed.ts
app/src/renderer/e2e/: app.spec.ts
app/src/renderer/i18n/: en.json  index.ts  ru.json
app/src/renderer/services/: tightrope.ts
app/src/renderer/shared/: math.ts  styles.ts  types.ts
app/src/renderer/state/: defaults.ts  logic.test.ts  logic.ts  statusNotices.test.ts  statusNotices.ts  useTightropeState.ts
app/src/renderer/styles/: app.css
app/src/renderer/test/: setup.ts
docs/: proxy-parity-map.md  runtime-observability-issues-2026-03-30.md
docs/superpowers/: README.md
docs/superpowers/plans/: 2026-03-28-admin-control-plane.md  2026-03-28-cluster-sync.md  2026-03-28-contract-baseline.md  2026-03-28-electron-desktop.md  2026-03-28-foundation-runtime.md  2026-03-28-proxy-compatibility.md  2026-03-30-sync-foundation.md
docs/superpowers/specs/: 2026-03-28-tightrope-rebuild-program-design.md  2026-03-30-sync-foundation-design.md  2026-04-01-cluster-sync-topology-dialog-design.md
native/: CMakeLists.txt
native/auth/api_keys/src/: key_validator.cpp  limit_enforcer.cpp  reservation.cpp
native/auth/crypto/src/: fernet.cpp  key_file.cpp
native/auth/dashboard/src/: password_auth.cpp  session_manager.cpp  totp_auth.cpp
native/auth/oauth/src/: callback_server.cpp  oauth_service.cpp  provider_client.cpp  token_refresh.cpp
native/balancer/include/: eligibility.h  scorer.h
native/balancer/src/: eligibility.cpp  scorer.cpp
native/balancer/strategies/src/: cost_aware.cpp  deadline_aware.cpp  headroom.cpp  latency_ewma.cpp  least_outstanding.cpp  power_of_two.cpp  round_robin.cpp  success_rate.cpp  weighted_round_robin.cpp
native/bridge/include/: bridge.h  bridge_helpers.h
native/bridge/include/internal/: addon_bindings_support.h
native/bridge/src/: addon.cpp  addon_bindings_support.cpp  bridge.cpp
native/config/include/: config.h  config_loader.h
native/config/src/: config_loader.cpp
native/core/logging/src/: logger.cpp
native/core/net/src/: ip_address.cpp  outbound_proxy.cpp
native/core/text/src/: json_escape.cpp
native/db/connection/src/: sqlite_pool.cpp  sqlite_registry.cpp
native/db/migration/src/: integrity_check.cpp  migration_runner.cpp
native/db/repositories/src/: account_repo.cpp  api_key_repo_common.cpp  api_key_repo_keys.cpp  api_key_repo_limits.cpp  api_key_repo_reservations.cpp  api_key_repo_schema.cpp  firewall_repo.cpp  request_log_repo.cpp  session_repo.cpp  settings_repo.cpp  sqlite_repo_utils.cpp  usage_repo.cpp
native/migrations/: 001_baseline.sql
native/proxy/include/: account_traffic.h  chat_completions_service.h  proxy_service.h  upstream_transport.h  ws_proxy.h
native/proxy/include/internal/: proxy_error_policy.h  proxy_service_helpers.h
native/proxy/openai/src/: error_envelope.cpp  model_registry.cpp  payload_normalizer.cpp  payload_normalizer_input.cpp  provider_contract.cpp  (+4 more)
native/proxy/src/: account_traffic.cpp  chat_completions_service.cpp  proxy_error_policy.cpp  proxy_service.cpp  proxy_service_helpers.cpp  upstream_transport.cpp  ws_proxy.cpp
native/server/include/: server.h
native/server/src/: admin_accounts_runtime.cpp  admin_api_keys_runtime.cpp  admin_logs_runtime.cpp  admin_oauth_runtime.cpp  admin_runtime.cpp  admin_runtime_common.cpp  admin_sessions_runtime.cpp  admin_settings_runtime.cpp  firewall_runtime.cpp  http_runtime_utils.cpp  proxy_request_logger.cpp  proxy_usage_reservation.cpp  server.cpp  server_routes.cpp  token_refresh_scheduler.cpp
native/sync/include/: cdc_triggers.h  checksum.h  conflict_resolver.h  hlc.h  hlc_functions.h  journal.h  journal_batch_id.h  persistent_journal.h  sync_engine.h  sync_logging.h  sync_protocol.h  sync_schema.h
native/sync/src/: cdc_triggers.cpp  checksum.cpp  conflict_resolver.cpp  hlc.cpp  hlc_functions.cpp  journal.cpp  journal_batch_id.cpp  persistent_journal.cpp  sync_engine.cpp  sync_logging.cpp  sync_protocol.cpp  sync_schema.cpp
native/tests/: main.cpp  smoke_test.cpp
native/tests/auth/: api_key_auth_test.cpp  oauth_callback_server_test.cpp  oauth_token_refresh_test.cpp
native/tests/bridge/: bridge_lifecycle_test.cpp
native/tests/config/: config_loader_test.cpp
native/tests/db/: api_key_repo_test.cpp  firewall_repo_test.cpp  migration_runner_test.cpp  request_log_repo_test.cpp  session_repo_test.cpp
native/tests/server/: accounts_controller_test.cpp  api_key_filter_model_policy_test.cpp  auth_controller_test.cpp  firewall_controller_test.cpp  firewall_filter_test.cpp  health_controller_test.cpp  keys_controller_test.cpp  logs_controller_test.cpp  oauth_provider_flow_test.cpp  proxy_middleware_runtime_test.cpp  server_admin_runtime_test.cpp  server_runtime_test.cpp  sessions_controller_test.cpp  settings_controller_test.cpp  token_refresh_scheduler_test.cpp
native/tools/: http_fixture_capture_main.cpp  streaming_fixture_capture_main.cpp
native/usage/include/: cost_calculator.h  trend_aggregator.h  usage_fetcher.h  usage_updater.h
native/usage/src/: cost_calculator.cpp  trend_aggregator.cpp  usage_fetcher.cpp  usage_updater.cpp
ports/argon2/: portfile.cmake
ports/libgnutls/: dirent.h  fix-dirent-include.patch  fix-libtool-ar-flags-quoting.patch  portfile.cmake
scripts/: bulk-add-accounts.cjs  bulk-add-accounts.mjs
scripts/contracts/: capture_compatibility_fixtures.py  capture_http_fixtures.sh  capture_streaming_fixtures.sh  reference_env.sh  start_reference_backend.sh  stop_reference_backend.sh
sketch/: index.html
(+319 files in other folders)
